2002-09-13  Francesco Potorti`  <pot@gnu.org>

	* play/tetris.el (tetris-blank-options, tetris-cell-options):
	Remove various redundant `(t nil)'.

	* play/snake.el (snake-border-options): Use color on tty if
	available.

	* play/tetris.el (tetris-border-options): Likewise.

	* play/pong.el (pong-border-options): Likewise, plus reset
	color on tty to be [0.5 0.5 0.5].

2002-09-12  Francesco Potorti`  <pot@gnu.org>

	* play/gamegrid.el (gamegrid-display-type): Treat any
	color-capable display as color-x, if display-color-p is fboundp.
	(gamegrid-make-color-x-face): Don't call gamegrid-color twice.
	(gamegrid-make-color-tty-face): Use the value of color, not the
	symbol itself.  Don't call gamegrid-color.

2002-09-11  Dave Love  <fx@gnu.org>

	* language/cyrillic.el (cyrillic-alternativnyj): Remove bogus
	charset-origin-alist.

2002-09-06  Dave Love  <fx@gnu.org>

	* mail/mailabbrev.el (sendmail-pre-abbrev-expand-hook):  Bind
	syntax and abbrev tables locally rather than setting and resetting
	them assuming Mail mode.
	(mailabbrev-unload-hook): New.

	* calendar/calendar.el (calendar-mode-line-format): Select the
	right window for mouse events.

2002-09-06  Juanma Barranquero  <lektu@terra.es>

	* calendar/solar.el (calendar-time-display-form): Fix spacing.

	* double.el (double-prefix-only): Likewise.

	* emacs-lisp/easymenu.el (easy-menu-define): Likewise.

	* emacs-lisp/find-func.el (find-function-search-for-symbol): Likewise.

	* emacs-lisp/float.el (string-to-float): Likewise.

	* emacs-lisp/rx.el (rx): Likewise.

	* faces.el (copy-face): Likewise.

	* hilit-chg.el (highlight-changes-colours)
	(highlight-changes-active-string)
	(highlight-changes-passive-string)
	(highlight-changes-global-modes, hilit-chg-hide-changes)
	(highlight-changes-rotate-faces, global-highlight-changes): Likewise.

	* international/mule.el (decode-char): Likewise.

	* international/ucs-tables.el (decode-char): Likewise.

	* progmodes/idlwave.el (idlwave-support-inheritance)