@@ -1,3 +1,8 @@
+2002-09-21  John Paul Wallington  <jpw@shootybangbang.com>
+
+	* net/eudc.el (eudc-install-menu): Use `define-key' and
+	`easy-menu-create-menu' to avoid duplication of menu.
+
 2002-09-13  Francesco Potorti`  <pot@gnu.org>
 
 	* play/tetris.el (tetris-blank-options, tetris-cell-options):
